# outliers_test

./: .gitignore  PRODUCTION_ROADMAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
outlier_tests/: __init__.py  basic_logger.py  dixon.py  grubb.py  iqr.py  mad.py  rosner.py
src/outlier_tests/: rosner.py
tests/: conftest.py  data_generation.R  test_outliers.py
tests/test_data/: results.json
