[tool.poetry]
name = "outlier-tests"
version = "0.1.0"
description = ""
authors = ["MatthewCorney <Matthew_corney@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "outlier_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
scipy = "^1.15.1"
pytest = "^8.3.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
